# termtag

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  main.rs  metadata.rs
src/flac/: mod.rs
src/formats/: mod.rs
src/formats/flac/: mod.rs  types.rs
